# BUAA-SE-2025-Project-Group4-SwiftJourney

./: .gitattributes  .gitignore  .prettierrc.json  Dockerfile  cspell.json  docker-compose.yaml  package-lock.json  package.json
backend/apps/api/: Cargo.toml
backend/apps/api/src/: lib.rs  main.rs
backend/apps/api/src/data/: hotel.rs  mod.rs  train.rs
backend/apps/api/src/dish/: mod.rs
backend/apps/api/src/general/: geo.rs  mod.rs  mode.rs
backend/apps/api/src/hotel/: mod.rs  order.rs
backend/apps/api/src/notify/: mod.rs
backend/apps/api/src/order/: mod.rs
backend/apps/api/src/payment/: mod.rs
backend/apps/api/src/resource/: hotel.rs  mod.rs
backend/apps/api/src/train/: mod.rs
backend/apps/api/src/user/: mod.rs  personal_info.rs  user_info.rs  user_manager.rs
backend/base/: Cargo.toml
backend/base/src/: lib.rs
backend/base/src/application/: mod.rs
backend/base/src/application/commands/: dish_query.rs  hotel.rs  hotel_data.rs  hotel_order.rs  message.rs  mod.rs  personal_info.rs  train_data.rs  train_dish.rs  train_order.rs  train_query.rs  transaction.rs  user_manager.rs  user_profile.rs
backend/base/src/application/service/: dish_query.rs  geo.rs  hotel.rs  hotel_data.rs  hotel_order.rs  message.rs  mod.rs  personal_info.rs  train_data.rs  train_dish.rs  train_order.rs  train_query.rs  transaction.rs  user_manager.rs  user_profile.rs
backend/base/src/domain/: mod.rs
backend/base/src/domain/model/: city.rs  dish.rs  hotel.rs  message.rs  mod.rs  order.rs  password.rs  personal_info.rs  route.rs  session.rs  session_config.rs  station.rs  takeaway.rs  train.rs  train_schedule.rs  transaction.rs  user.rs
backend/base/src/domain/repository/: city.rs  dish.rs  hotel.rs  hotel_rating.rs  mod.rs  notify.rs  occupied_room.rs  order.rs  personal_info.rs  route.rs  seat_availability.rs  session.rs  (+6 more)
backend/base/src/infrastructure/: macros.rs  mod.rs
backend/base/src/models/: city.rs  dish.rs  dish_order.rs  hotel.rs  hotel_order.rs  hotel_rating.rs  hotel_room_type.rs  message.rs  mod.rs  occupied_room.rs  occupied_seat.rs  person_info.rs  prelude.rs  route.rs  seat_availability.rs  seat_type.rs  seat_type_in_train_type.rs  seat_type_mapping.rs  station.rs  takeaway_dish.rs  takeaway_order.rs  takeaway_shop.rs  train.rs  train_order.rs  train_route.rs  train_schedule.rs  train_type.rs  transaction.rs  user.rs
(+231 files in other folders)
