[package]
name = "base"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }

sea-orm = { version = "1.1.0", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
thiserror = "2.0"
anyhow = "1.0"
email_address = "0.2"
argon2 = { version = "0.5", features = ["password-hash", "alloc"] }

regex = "1.11"
phf = "0.11"